# whatsapp-models

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/skills/commit/: SKILL.md
.github/workflows/: ci.yml  release.yml
src/whatsapp_models/: __init__.py
src/whatsapp_models/common/: __init__.py  enums.py
src/whatsapp_models/media/: __init__.py  media.py
src/whatsapp_models/message_templates/: __init__.py  components.py  enums.py  send.py  template.py
src/whatsapp_models/messages/: __init__.py  base.py  contacts.py  interactive.py  location.py  media.py  reaction.py  status.py  template.py  text.py  unions.py
src/whatsapp_models/phone_numbers/: __init__.py  phone_number.py
src/whatsapp_models/webhooks/: __init__.py  errors.py  events.py  messages.py  notification.py  statuses.py
tests/common/: test_enums.py
tests/media/: test_media.py
tests/message_templates/: test_components.py  test_enums.py  test_template.py
tests/messages/: test_contacts_types.py  test_messages.py
tests/phone_numbers/: test_phone_numbers.py
tests/webhooks/: test_errors.py  test_events.py  test_messages.py  test_notification.py  test_statuses.py
